--- a/top-right.html
+++ b/top-right.html
@@ -86,9 +86,9 @@
     
     <script>
         //***edit this only for your information***
-        const player = "ALEJANDRO CORRALES";
-        const agency = "LOS SANTOS SHERIFF DEPARTMENT";
-        const callsign = "[8730]";
+        const player = "Hawain";
+        const agency = "MANO COUNTY SHERIFFS OFFICE";
+        const callsign = "MI-17";
         //***        end edit this only         ***
     
         var d,h,m,s,animate;
